--- a/index.css
+++ b/index.css
@@ -6,7 +6,9 @@
 
 body{
     background: #F3F5FC;
-    max-width: 50%;
+    position: relative;
+    width: 1440px;
+    height: 1024px;
 }
 
 header{
@@ -37,6 +39,8 @@ header{
     font-size: 32px;
     line-height: 150%;
     color: #0a3871;
+    border: none;
+    background-color: #F3F5FC;
 }
 
 .rectangulo{
@@ -50,10 +54,11 @@ header{
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
     border-radius: 32px;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .contenedorMensajesRectangulo{
+    margin-top: 16px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -83,4 +88,73 @@ header{
     line-height: 150%;
     text-align: center;
     color: #495057;
+}
+
+.contenedorAdvertencia{
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    width: 229px;
+    height: 18px;
+    left: 240px;
+    top: 851px;
+}
+
+.signoExclamacion{
+    width: 16px;
+    height: 16px;
+}
+
+.textoAdvertencia{
+    width: 205px;
+    height: 18px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 150%;
+    color: #495057;
+    opacity: 0.8;
+}
+
+.contenedorBotones{
+    position: absolute;
+    width: 680px;
+    height: 67px;
+    left: 240px;
+    top: 885px;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 24px;
+}
+
+.botonEncriptar{
+    width: 328px;
+    height: 67px;
+    background: #0A3871;
+    border-radius: 24px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.botonDesencriptar{
+    width: 328px;
+    height: 67px;
+    background: #D8DFE8;
+    border: 1px solid #0A3871;
+    border-radius: 24px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #0A3871;
 }
