--- a/index.css
+++ b/index.css
@@ -6,9 +6,11 @@
 
 body{
     background: #F3F5FC;
-    position: relative;
-    width: 1440px;
-    height: 1024px;
+    position: absolute;
+    width: 77%;
+    height: 100%;
+    left: 220px;
+    right: 220px;
 }
 
 header{
@@ -19,6 +21,12 @@ header{
     top: 40px;
     left: 40px;
     justify-content: center;
+}
+
+main{
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -47,9 +55,9 @@ header{
     display: flex;
     position: absolute;
     width: 400px;
-    height: 944px;
-    left: 1000px;
+    right: 40px;
     top: 40px;
+    bottom: 40px;
     background-color: #ffffff;
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
     border-radius: 32px;
@@ -97,7 +105,7 @@ header{
     width: 229px;
     height: 18px;
     left: 240px;
-    top: 851px;
+    bottom: 155px;
 }
 
 .signoExclamacion{
@@ -122,11 +130,10 @@ header{
     width: 680px;
     height: 67px;
     left: 240px;
-    top: 885px;
+    bottom: 72px;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    padding: 0px;
     gap: 24px;
 }
 
@@ -148,6 +155,52 @@ header{
     width: 328px;
     height: 67px;
     background: #D8DFE8;
+    border: 1px solid #0A3871;
+    border-radius: 24px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #0A3871;
+}
+
+.rectangulo2{
+    display: none;
+    position: absolute;
+    width: 400px;
+    right: 40px;
+    top: 40px;
+    bottom: 40px;
+    background-color: #ffffff;
+    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+    border-radius: 32px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.textarea{
+    position: relative;
+    width: 80%;
+    margin: 32px;
+    border: none;
+    resize: none;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 150%;
+    overflow-y: hidden;
+}
+
+.botonCopiar{
+    position: relative;
+    width: 328px;
+    height: 67px;
+    margin: 0px 32px 32px 32px;
+    background: #FFFFFF;
     border: 1px solid #0A3871;
     border-radius: 24px;
     font-family: 'Inter';
