--- a/index.css
+++ b/index.css
@@ -5,8 +5,9 @@
 }
 
 body{
-    position: relative;
+    position: absolute;
     width: 1440px;
+    left: 12.17%;
     height: 1024px;
     background: #F3F5FC;
 }
@@ -245,12 +246,12 @@ main{
 
 @media screen and (max-width: 768px) {
     body{
-        background: #F3F5FC;
+        background: rgb(243, 245, 252);
         position: absolute;
-        width: 100%;
+        width: 768px;
         height: 1174px;
-        left: 0;
-        right: 0;
+        left: 0px;
+        right: 0px;
     }
 
     header{
@@ -352,5 +353,70 @@ main{
         width: 624px;
         height: 67px;
         padding: 24px;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    body{
+        background: rgb(243, 245, 252);
+        position: relative;
+        width: 375px;
+        height: 933px;
+        left: 0px;
+        right: 0px;
+    }
+
+    header{
+        display: block;
+        position: absolute;
+        left: 16px;
+        right: 90.74%;
+        top: 24px;
+    }
+
+    .ingreseTextoAqui{
+        width: 343px;
+        height: 48px;
+        top: 152px;
+        left: 16px;
+    }
+
+    .contenedorAdvertencia{
+        top: 451px;
+        left: 16px;
+    }
+
+    .contenedorBotones{
+        height: 158px;
+        top: 485px;
+        left: 16px;
+        flex-direction: column;
+    }
+
+    .rectangulo{
+        width: 327px;
+        height: 186px;
+        top: 707px;
+        left: 24px;
+    }
+
+    .ningunMensajeEncontrado{
+        width: 263px;
+    }
+
+    .mensajeRecuadro{
+        width: 263px;
+    }
+
+    .rectangulo2{
+        position: absolute;
+        width: 343px;
+        height: 595px;
+        left: 16px;
+        top: 707px;
+    }
+
+    .botonCopiar{
+        width: 279px;
     }
 }
