--- a/index.css
+++ b/index.css
@@ -244,7 +244,7 @@ main{
     font-size: 16px;
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 1174px) {
     body{
         background: rgb(243, 245, 252);
         position: absolute;
@@ -356,7 +356,7 @@ main{
     }
 }
 
-@media screen and (max-width: 480px) {
+@media (max-width: 768px){
     body{
         background: rgb(243, 245, 252);
         position: relative;
