--- a/index.css
+++ b/index.css
@@ -244,7 +244,16 @@ main{
     font-size: 16px;
 }
 
-@media (max-width: 1174px) {
+
+@media (max-width: 1630px) {
+    body{
+        left: 0px;
+        right: 0px;
+    }
+}
+
+
+@media (max-width: 1420px) {
     body{
         background: rgb(243, 245, 252);
         position: absolute;
